--- a/project.config
+++ b/project.config
@@ -19,5 +19,5 @@
 	pushMerge = group user/Adam Balachowski (Adam16)
 [access "refs/tags/*"]
 	push = +force group user/Adam Balachowski (Adam16)
-	pushTag = group user/Adam Balachowski (Adam16)
-	pushSignedTag = group user/Adam Balachowski (Adam16)
+	createTag = group user/Adam Balachowski (Adam16)
+	createSignedTag = group user/Adam Balachowski (Adam16)
